# sage-recommendations

./: .dockerignore  .env.example  .gitignore  .hfignore  DATA_CARD.md  Dockerfile  Dockerfile.lite  Makefile  README.md  pyproject.toml  render-lite.yaml  render.yaml
data/: .gitignore  README.md  eda_stats_latest.json
docs/: chunking_decisions.md
reports/: eda_report.md
sage/: __init__.py  utils.py
scripts/: build_esci_overlap_query_bank.py  build_eval_dataset.py  build_natural_eval_dataset.py  build_query_bank.py  calibrate_token_threshold.py  demo.py  e2e_success_rate.py  eda.py  eval_gate.py  evaluate_boundary_behavior.py  evaluate_evidence_gate_holdout.py  evaluate_retrieval_configs.py  evaluation.py  explanation.py  faithfulness.py  freeze_faithfulness_seed_bundles.py  human_eval.py  import_esci_queries.py  kaggle_pipeline.ipynb  kaggle_pipeline.py  load_test.py  materialize_faithfulness_cases.py  pipeline.py  sanity_checks.py  summary.py
tests/: test_aggregation.py  test_api.py  test_artifact_io.py  test_boundary_behavior.py  test_build_esci_overlap_query_bank_script.py  test_chunking.py  test_cli.py  test_corpus_alignment.py  test_corpus_anchor.py  test_data_init.py  test_embeddings.py  test_esci_query_bank.py  test_eval.py  test_eval_status.py  test_evaluation.py  test_evaluation_script.py  test_evidence.py  test_evidence_gate_holdout.py  test_evidence_guardrails.py  test_explanation.py  test_faithfulness.py  test_faithfulness_cases.py  test_freeze_faithfulness_seed_bundles.py  test_gate_calibration.py  test_hhem.py  test_import_esci_queries.py  (+22 more)
(+188 files in other folders)
